--- a/.babelrc
+++ b/.babelrc
@@ -12,9 +12,18 @@
     }]
   ],
   "plugins": [
-    ["@babel/plugin-proposal-decorators", { "legacy": true }],
-    ["@babel/plugin-proposal-class-properties", { "loose": true }],
-    ["@babel/plugin-proposal-private-methods", { "loose": true }],
-    ["@babel/plugin-proposal-private-property-in-object", { "loose": true }]
+    ["@babel/plugin-proposal-decorators", {
+      "decoratorsBeforeExport": true,
+      "legacy": false
+    }],
+    ["@babel/plugin-proposal-class-properties", {
+      "loose": true
+    }],
+    ["@babel/plugin-proposal-private-methods", {
+      "loose": true
+    }],
+    ["@babel/plugin-proposal-private-property-in-object", {
+      "loose": true
+    }]
   ]
 } 
