--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "tgeditor-card",
   "version": "1.0.0",
-  "description": "Home Assistant Card mit visuellem Editor",
-  "main": "dist/tgeditor-card.js",
+  "description": "Eine Home Assistant Karte mit Editor-Funktionalität",
+  "main": "src/tgeditor-card.js",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "build": "webpack --mode=production",
+    "dev": "webpack --mode=development --watch"
   },
   "keywords": [
     "home-assistant",
@@ -15,25 +15,21 @@
     "lovelace",
     "custom-cards"
   ],
-  "author": "",
+  "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/plugin-proposal-private-methods": "^7.18.6",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/preset-env": "^7.22.20",
-    "babel-loader": "^9.1.3",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.8.1",
-    "html-webpack-inline-source-plugin": "^1.0.0-beta.2",
-    "html-webpack-plugin": "^5.5.3",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
+    "@babel/core": "^7.24.0",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-decorators": "^7.27.1",
-    "@marcokreeft/ha-editor-formbuilder": "^2024.9.1"
+    "@babel/plugin-proposal-decorators": "^7.24.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.24.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
+    "html-webpack-inline-source-plugin": "^1.0.0-beta.2",
+    "html-webpack-plugin": "^5.6.0",
+    "lit": "^3.1.2",
+    "style-loader": "^3.3.4",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
