--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "style-loader": "^3.3.4",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "custom-card-helpers": "^1.9.0"
   }
 }
