--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/tgeditor-card.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "dev": "webpack --mode=development --watch"
+    "dev": "webpack --mode=development --watch",
+    "format": "prettier --write \"src/**/*.{js,json}\"",
+    "format:check": "prettier --check \"src/**/*.{js,json}\""
   },
   "keywords": [
     "home-assistant",
@@ -28,6 +30,7 @@
     "html-webpack-inline-source-plugin": "^1.0.0-beta.2",
     "html-webpack-plugin": "^5.6.0",
     "lit": "^3.1.2",
+    "prettier": "^3.5.3",
     "style-loader": "^3.3.4",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
