Verbesserte DataProvider-Architektur und Code-Formatierung
- Zentralisierte DataProvider-Initialisierung in EPGView
- Entfernte mehrfache _loadData-Aufrufe und doppelte firstUpdated-Methoden
- Korrigierte Import-Pfade und hass-Property-Verwaltung
- Verbesserte Fehlerbehandlung für EPG-Daten-Parsing
- Hinzugefügte Debug-Meldungen mit 'filterx'-Präfix
- Code-Formatierung und Konsistenz verbessert
- Optimierte Kanal-Sortierung und -Gruppierung

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^5.0.2"
   },
   "dependencies": {
-    "custom-card-helpers": "^1.9.0"
+    "custom-card-helpers": "^1.9.0",
+    "js-yaml": "^4.1.0"
   }
 }
