Vormonat schreibgeschützt + Standardwert für sichtbare Monate im Editor
- Vormonat ist jetzt schreibgeschützt (Buttons deaktiviert, visuell markiert)
- Prüfung in renderMonth und toggleDay implementiert
- CSS-Styling für readonly/disabled Buttons hinzugefügt
- Neues Editor-Feld 'initialDisplayedMonths' für Standardwert der sichtbaren Monate
- Validierung: initialDisplayedMonths wird automatisch auf numberOfMonths begrenzt
- Standardwerte angepasst: numberOfMonths=14, initialDisplayedMonths=2

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tgeditor-card",
+  "name": "tgcalendar-card",
   "version": "1.0.0",
-  "description": "Eine Home Assistant Karte mit Editor-Funktionalität",
-  "main": "src/tgeditor-card.js",
+  "description": "Eine Home Assistant Karte für Arbeitszeiten-Kalender",
+  "main": "src/tgcalendar-card.js",
   "type": "module",
   "scripts": {
     "build": "NODE_OPTIONS='--experimental-json-modules' webpack --mode=production",
