Rename: calendar → shiftschedule
- Dateien umbenannt: calendar-view → shiftschedule-view
- Klasse umbenannt: CalendarView → ShiftScheduleView
- Custom Element: calendar-view → shiftschedule-view
- Konfiguration: tgcalendar-card → tgshiftschedule-card
- Texte angepasst: Kalender → Schicht/Schichtplan
  - Standardkalender → Standardschicht
  - Kalender B/C/D/E → Schicht B/C/D/E
- CSS-Variablen: --tgcalendar → --tgshiftschedule
- package.json, hacs.json, card-config.js angepasst

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "tgcalendar-card",
+  "name": "tgshiftschedule-card",
   "version": "1.0.0",
-  "description": "Eine Home Assistant Karte für Arbeitszeiten-Kalender",
-  "main": "src/tgcalendar-card.js",
+  "description": "Eine Home Assistant Karte für Schichtpläne",
+  "main": "src/tgshiftschedule-card.js",
   "type": "module",
   "scripts": {
     "build": "NODE_OPTIONS='--experimental-json-modules' webpack --mode=production",
