Feature: Blueprint wird auch bei Home Assistant Neustart getriggert
- Trigger für 'homeassistant.start' Event hinzugefügt
- Prüft Schichtplan auch direkt nach Neustart von HA

--- a/blueprints/automation/tgshiftschedule.yaml
+++ b/blueprints/automation/tgshiftschedule.yaml
@@ -55,6 +55,9 @@ blueprint:
         action: {}
 
 trigger:
+  - platform: homeassistant
+    event: start
+    id: haStart
   - platform: time
     at: "00:00:00"
   - platform: state
