feat: Saver-Integration und Fehlerbehebungen
- Saver-Integration als empfohlene Speichermethode implementiert
  - store_mode Parameter (saver/text_entity) im Editor
  - saver_key Konfiguration für Variablennamen
  - Priorisierte Datenladung: Zuerst Saver, dann Fallback zu Entities
  - Unterschiedliche Datenformate je nach Modus (komprimiert/JSON)
  - Automatische Fallback-Mechanismen

- Fehlerbehebungen:
  - Verdoppelte Indikatoren behoben (direkte DOM-Manipulation)
  - Farbaktualisierung beim Kalenderwechsel korrigiert
  - Fix für Löschen des letzten Tages eines Monats
  - Initiales Laden optimiert (keine Überschreibung beim Laden)
  - Saver-Variable-Prüfung vor dem Schreiben korrigiert

- Performance-Optimierungen:
  - _directDOMUpdateInProgress Set verhindert Lit-Konflikte
  - Template-Integration für manuelle DOM-Updates
  - shouldUpdate() überspringt Updates während direkter Manipulation

- Dokumentation:
  - README.md aktualisiert mit Saver als empfohlene Methode
  - PROJEKTANALYSE.md aktualisiert mit neuen Features
  - .gitignore erweitert für nicht-projektbezogene Dateien

Version: 2025.12-0043

--- a/.gitignore
+++ b/.gitignore
@@ -20,16 +20,37 @@ build/
 .vscode/
 *.swp
 *.swo
-.DS_Store
+*.sublime-project
+*.sublime-workspace
+*.code-workspace
+Thumbs.db
 
 # Environment variables
 .env
 .env.local
-.env.*.local 
-node_modules
+.env.*.local
 
 # Development/Helper Scripts (nur lokal, nicht auf GitHub)
 *.sh
 *.py
-!package.json
-!package-lock.json
+scripts/
+
+# Backup files
+*~
+~/
+*.bak
+*.backup
+*.tmp
+
+# Logs
+*.log
+logs/
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Desktop.ini
